--- a/OpenGL-project/Makefile
+++ b/OpenGL-project/Makefile
@@ -1,6 +1,6 @@
-all: : linux.cpp
+all: linux.cpp
 	scp ./OpenGL-project/linux.cpp ecube@192.168.0.170:~/teddy/
 	scp ./OpenGL-project/Makefile ecube@192.168.0.170:~/teddy/
-	
+
 	scp ./OpenGL-project/linux.cpp ecube@192.168.46.19:~/teddy/
 	scp ./OpenGL-project/Makefile ecube@192.168.46.19:~/teddy/
