--- a/OpenGL-project/Makefile
+++ b/OpenGL-project/Makefile
@@ -1,4 +1,4 @@
-all: linux.cpp
+all: 
 	scp ./OpenGL-project/linux.cpp ecube@192.168.0.170:~/teddy/
 	scp ./OpenGL-project/Makefile ecube@192.168.0.170:~/teddy/
 
