--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,23 @@ OpenGL-project/.vs/OpenGL-project/v17/Browse.VC.db-shm
 OpenGL-project/.vs/OpenGL-project/v17/Browse.VC.db-wal
 OpenGL-project/.vs/OpenGL-project/v17/Browse.VC.opendb
 OpenGL-project/.vs/OpenGL-project/v17/ipch/AutoPCH/fb4c4ef38a1be66f/LINUX.ipch
+OpenGL-project/OpenGL-project/Debug/vc143.pdb
+OpenGL-project/OpenGL-project/Debug/vc143.idb
+OpenGL-project/OpenGL-project/Debug/OpenGL-project.tlog/OpenGL-project.lastbuildstate
+OpenGL-project/OpenGL-project/Debug/OpenGL-project.tlog/link.write.1.tlog
+OpenGL-project/OpenGL-project/Debug/OpenGL-project.tlog/link.read.1.tlog
+OpenGL-project/OpenGL-project/Debug/OpenGL-project.tlog/link.command.1.tlog
+OpenGL-project/OpenGL-project/Debug/OpenGL-project.tlog/CL.write.1.tlog
+OpenGL-project/OpenGL-project/Debug/OpenGL-project.tlog/CL.read.1.tlog
+OpenGL-project/OpenGL-project/Debug/OpenGL-project.tlog/Cl.items.tlog
+OpenGL-project/OpenGL-project/Debug/OpenGL-project.tlog/CL.command.1.tlog
+OpenGL-project/OpenGL-project/Debug/OpenGL-project.log
+OpenGL-project/OpenGL-project/Debug/OpenGL-project.ilk
+OpenGL-project/OpenGL-project/Debug/OpenGL-project.exe.recipe
+OpenGL-project/OpenGL-project/Debug/linux.obj
+OpenGL-project/Debug/OpenGL-project.pdb
+OpenGL-project/Debug/OpenGL-project.exe
+OpenGL-project/.vs/OpenGL-project/v17/Browse.VC.db
+OpenGL-project/.vs/OpenGL-project/v17/.suo
+OpenGL-project/.vs/OpenGL-project/FileContentIndex/77281b91-6eee-484e-91ee-2cfa74d71d14.vsidx
+OpenGL-project/.vs/OpenGL-project/FileContentIndex/39b1d3cc-be9a-4d88-af5b-0ac3bc32291d.vsidx
