--- a/OpenGL-project/OpenGL-project/Makefile
+++ b/OpenGL-project/OpenGL-project/Makefile
@@ -1,7 +1,7 @@
 all: linux.out
 
 linux.out: linux.cpp
-	gcc linux.cpp -o linux.out -lglut -lGL -lGLU
+	gcc linux.cpp -o linux.out -lglut -lGL -lGLU -lm
 	./linux.out
 	#ssh ecube@192.168.0.170 ~/teddy/linux.out
 	#ssh ecube@192.168.218.19 ~/teddy/linux.out
