--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,12 @@ OpenGL-project/.vs/OpenGL-project/v17/.suo
 OpenGL-project/.vs/OpenGL-project/FileContentIndex/77281b91-6eee-484e-91ee-2cfa74d71d14.vsidx
 OpenGL-project/.vs/OpenGL-project/FileContentIndex/39b1d3cc-be9a-4d88-af5b-0ac3bc32291d.vsidx
 *.vsidx
+.vs/slnx.sqlite
+.vs/ProjectSettings.json
+.vs/EmbeddedSystem/v17/ipch/AutoPCH/db4f4087d344ab7c/LINUX.ipch
+.vs/EmbeddedSystem/v17/ipch/AutoPCH/8b4468da7eb43de5/KMS.ipch
+.vs/EmbeddedSystem/v17/Browse.VC.opendb
+.vs/EmbeddedSystem/v17/Browse.VC.db-wal
+.vs/EmbeddedSystem/v17/Browse.VC.db-shm
+.vs/EmbeddedSystem/v17/Browse.VC.db
+.vs/EmbeddedSystem/v17/.wsuo
