--- a/OpenGL-project/OpenGL-project/OpenGL-project.vcxproj.filters
+++ b/OpenGL-project/OpenGL-project/OpenGL-project.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="linux.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="textlcd.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="textlcd.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
