--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ OpenGL-project/.vs/OpenGL-project/FileContentIndex/39b1d3cc-be9a-4d88-af5b-0ac3b
 *.db
 *.obj
 *.db
+OpenGL-project/.vs/OpenGL-project/v17/ipch/AutoPCH/c969e0b64c122a8c/LINUX.ipch
+OpenGL-project/.vs/OpenGL-project/FileContentIndex/read.lock
