--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.vs/
+OpenGL-project/.vs/
 
 OpenGL-project/.vs/OpenGL-project/FileContentIndex/2c51db61-b4ee-4806-9a7a-b85b4f6775f2.vsidx
 OpenGL-project/.vs/OpenGL-project/FileContentIndex/821bfaa1-12f7-43b4-af6c-ed7656b18448.vsidx
@@ -25,22 +27,4 @@ OpenGL-project/OpenGL-project/Debug/OpenGL-project.exe.recipe
 OpenGL-project/OpenGL-project/Debug/linux.obj
 OpenGL-project/Debug/OpenGL-project.pdb
 OpenGL-project/Debug/OpenGL-project.exe
-OpenGL-project/.vs/OpenGL-project/v17/Browse.VC.db
-OpenGL-project/.vs/OpenGL-project/v17/.suo
-OpenGL-project/.vs/OpenGL-project/FileContentIndex/77281b91-6eee-484e-91ee-2cfa74d71d14.vsidx
-OpenGL-project/.vs/OpenGL-project/FileContentIndex/39b1d3cc-be9a-4d88-af5b-0ac3bc32291d.vsidx
-*.vsidx
-.vs/slnx.sqlite
-.vs/ProjectSettings.json
-.vs/EmbeddedSystem/v17/ipch/AutoPCH/db4f4087d344ab7c/LINUX.ipch
-.vs/EmbeddedSystem/v17/ipch/AutoPCH/8b4468da7eb43de5/KMS.ipch
-.vs/EmbeddedSystem/v17/Browse.VC.opendb
-.vs/EmbeddedSystem/v17/Browse.VC.db-wal
-.vs/EmbeddedSystem/v17/Browse.VC.db-shm
-.vs/EmbeddedSystem/v17/Browse.VC.db
-.vs/EmbeddedSystem/v17/.wsuo
-*.db
-*.obj
-*.db
-OpenGL-project/.vs/OpenGL-project/v17/ipch/AutoPCH/c969e0b64c122a8c/LINUX.ipch
-OpenGL-project/.vs/OpenGL-project/FileContentIndex/read.lock
+
