--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 OpenGL-project/.vs/
 OpenGL-project/OpenGL-project/Debug/
 
+OpenGL-project/Debug/OpenGL-project.pdb
+OpenGL-project/Debug/OpenGL-project.exe
