--- a/OpenGL-project/OpenGL-project/OpenGL-project.vcxproj.filters
+++ b/OpenGL-project/OpenGL-project/OpenGL-project.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="textlcd.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="simuwork.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
