--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,4 @@ OpenGL-project/OpenGL-project/Debug/linux.obj
 OpenGL-project/Debug/OpenGL-project.pdb
 OpenGL-project/Debug/OpenGL-project.exe
 
-OpenGL-project/Debug/OpenGL-project.pdb
-OpenGL-project/Debug/OpenGL-project.exe
+OpenGL-project/Debug/
