첫 화면 메뉴 버튼

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,12 @@ OpenGL-project/Debug/OpenGL-project.pdb
 OpenGL-project/Debug/OpenGL-project.exe
 
 OpenGL-project/Debug/
+OpenGL-project/OpenGL-project/Debug/vc143.pdb
+OpenGL-project/OpenGL-project/Debug/vc143.idb
+OpenGL-project/OpenGL-project/Debug/OpenGL-project.tlog/link.read.1.tlog
+OpenGL-project/OpenGL-project/Debug/OpenGL-project.tlog/CL.command.1.tlog
+OpenGL-project/OpenGL-project/Debug/OpenGL-project.log
+OpenGL-project/OpenGL-project/Debug/OpenGL-project.ilk
+OpenGL-project/OpenGL-project/Debug/linux.obj
+OpenGL-project/Debug/OpenGL-project.pdb
+OpenGL-project/Debug/OpenGL-project.exe
