--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@ OpenGL-project/OpenGL-project/Debug/OpenGL-project.ilk
 OpenGL-project/OpenGL-project/Debug/linux.obj
 OpenGL-project/Debug/OpenGL-project.pdb
 OpenGL-project/Debug/OpenGL-project.exe
+OpenGL-project/OpenGL-project/Debug/button.obj
+OpenGL-project/OpenGL-project/Debug/linux.obj
+OpenGL-project/OpenGL-project/Debug/OpenGL-project.tlog/CL.command.1.tlog
+OpenGL-project/OpenGL-project/Debug/textlcd.obj
+OpenGL-project/OpenGL-project/Debug/traffic_light.obj
+OpenGL-project/OpenGL-project/Debug/vc143.idb
+OpenGL-project/OpenGL-project/Debug/vc143.pdb
