--- a/btn/Makefile
+++ b/btn/Makefile
@@ -9,7 +9,7 @@ all: btntest.c libMyPeri.a
 libMyPeri.a : btn.o
 	arm-linux-gnueabi-ar rc libMyPeri.a btn.o
 
-btn.o: btn.h led.c
+btn.o: btn.h btn.c
 	arm-linux-gnueabi-gcc -c btn.c -o btn.o
 
 clear : 
