buzzer 전용 함수 완료

--- a/drivertest/buzzer/Makefile
+++ b/drivertest/buzzer/Makefile
@@ -1,5 +1,6 @@
 all: libMyPeri.a
 	arm-linux-gnueabi-gcc -o buzzertest.elf buzzertest.c -l MyPeri -L.
+	scp ./buzzertest.elf ecube@192.168.97.99:~/teddy/
 
 libMyPeri.a: buzzer.o
 	arm-linux-gnueabi-ar rc libMyPeri.a buzzer.o
@@ -10,3 +11,4 @@ buzzer.o: buzzer.h buzzer.c
 clear : 
 	rm *.o
 	rm libMyPeri.a
+	make
