--- a/textlcd_homework/Makefile
+++ b/textlcd_homework/Makefile
@@ -1,6 +1,7 @@
 //Makefile
 all: textlcdtest.c libMyPeri.a
 	arm-linux-gnueabi-gcc -o textlcdtest textlcdtest.c -l MyPeri -L.
+	scp ./btntest ecube@192.168.97.99:~/
 
 libMyPeri.a : lcdtext.o
 	arm-linux-gnueabi-ar rc libMyPeri.a lcdtext.o
