--- a/drivertest/colorled/makefile
+++ b/drivertest/colorled/makefile
@@ -1,4 +1,5 @@
 all: colorledtest.c libMyPeri.a
+	arm-linux-gnueabi-ar -rcs libMyPeri.a colorled.o
 	arm-linux-gnueabi-gcc -o colorledtest colorledtest.c -l MyPeri -L.
 
 libMyPeri.a : colorled.o
