--- a/drivertest/colorled/makefile
+++ b/drivertest/colorled/makefile
@@ -1,14 +1,15 @@
-all: colorledtest.c libMyPeri.a
-	arm-linux-gnueabi-ar -rcs libMyPeri.a colorled.o
-	arm-linux-gnueabi-ranlib libMyPeri.a
+all: colorledtest
+
+colorledtest: colorledtest.c libMyPeri.a
 	arm-linux-gnueabi-gcc -o colorledtest colorledtest.c -l MyPeri -L.
 
-libMyPeri.a : colorled.o
+libMyPeri.a: colorled.o
 	arm-linux-gnueabi-ar rc libMyPeri.a colorled.o
+	arm-linux-gnueabi-ranlib libMyPeri.a
 
-led.o: colorled.h colorled.c
-	arm-linux-gnueabi-gcc -c colorledled.c -o colorled.o
+colorled.o: colorled.h colorled.c
+	arm-linux-gnueabi-gcc -c colorled.c -o colorled.o
 
-clear : 
-	rm *.o
-	rm libMyPeri.a
+clear:
+	rm -f *.o libMyPeri.a colorledtest
+
