--- a/drivertest/colorled/makefile
+++ b/drivertest/colorled/makefile
@@ -1,7 +1,7 @@
 all: colorledtest
 
 colorledtest: colorledtest.c libMyPeri.a
-	arm-linux-gnueabi-gcc -o colorledtest colorledtest.c -l MyPeri -L.
+	arm-linux-gnueabi-gcc -o colorledtest colorledtest.c -L. -lMyPeri
 
 libMyPeri.a: colorled.o
 	arm-linux-gnueabi-ar rc libMyPeri.a colorled.o
@@ -10,6 +10,5 @@ libMyPeri.a: colorled.o
 colorled.o: colorled.h colorled.c
 	arm-linux-gnueabi-gcc -c colorled.c -o colorled.o
 
-clear:
+clean:
 	rm -f *.o libMyPeri.a colorledtest
-
