pull하기 위해 커밋

--- a/drivertest/btn/Makefile
+++ b/drivertest/btn/Makefile
@@ -1,12 +1,25 @@
-all: btntest.c libMyPeri.a
-	arm-linux-gnueabi-gcc -o btntest btntest.c -l MyPeri -L. -lpthread
+all: btntest.elf
+	scp ./btntest.elf ecube@192.168.254.99:~/
+	echo "		6) send complete"
 
-libMyPeri.a : btn.o 
+btntest.elf: libMyPeri.a btntest.o
+	arm-linux-gnueabi-gcc btntest.o -l MyPeri -L. -o btntest.elf -lpthread
+	echo "		5) btntest.elf"
+
+btntest.o: btntest.c btn.h
+	arm-linux-gnueabi-gcc -c -o btntest.o btntest.c
+	echo "		4) btntest.o"
+
+libMyPeri.a: btn.o
 	arm-linux-gnueabi-ar rc libMyPeri.a btn.o
+	echo "		3) libMyPeri.a"
 
-btn.o: btn.h btn.c
-	arm-linux-gnueabi-gcc -c btn.c -o btn.o
+btn.o: btn.c btn.h
+	arm-linux-gnueabi-gcc --static -c -o btn.o btn.c
+	echo "		2) btn.o"
 
 clear : 
 	rm *.o
 	rm libMyPeri.a
+	echo "		1) make start"
+	make
