OpenGL+EGL+BMP 중단

--- a/OldProject/OpenGL-project/Makefile
+++ b/OldProject/OpenGL-project/Makefile
@@ -5,5 +5,6 @@ all:
 	scp ./OpenGL-project/linux.cpp ecube@192.168.207.19:~/teddy/disptest/
 	scp ./OpenGL-project/Makefile ecube@192.168.207.19:~/teddy/disptest/
 	scp ./OpenGL-project/simuwork.h ecube@192.168.207.19:~/teddy/disptest/
-	scp ./OpenGL-project/libfbdev/libfbdev.o ecube@192.168.207.19:~/teddy/disptest/
-	scp ./OpenGL-project/libbmp/libbmp.o ecube@192.168.207.19:~/teddy/disptest/
+	scp ./OpenGL-project/libfbdev/libfbdev.c ecube@192.168.207.19:~/teddy/disptest/
+	scp ./OpenGL-project/libfbdev/libfbdev.h ecube@192.168.207.19:~/teddy/disptest/
+	scp ./OpenGL-project/libbmp/bitmapFileHeader.h ecube@192.168.207.19:~/teddy/disptest/
