--- a/test/makefile
+++ b/test/makefile
@@ -2,8 +2,8 @@ all: testing
 	scp ./testing ecube@172.20.10.3:~/testfolder
 	echo "		5) send complete"
 
-testing: test.c libMyPeri.a
-	arm-linux-gnueabi-gcc -o testing test.c -l MyPeri -L. -lpthread -lm
+testing: test.c libMyPeri.a libtouch.a
+	arm-linux-gnueabi-gcc -Xlinker --start-group -lpthread test.o -ltouch -lMyPeri -lm -Xlinker --end-group  -L. -o testing
 	echo "		4) testing OUTPUT"
 
 test.o: test.c
@@ -12,7 +12,6 @@ test.o: test.c
 
 clear : 
 	rm *.o
-	rm libMyPeri.a
-	echo "		2) remove .o, .a"
+	echo "		2) remove .o"
 	make
 	echo "		1) make START"
