OpenGL+EGL+BMP 중단

--- a/OldProject/OpenGL-project/OpenGL-project/Makefile
+++ b/OldProject/OpenGL-project/OpenGL-project/Makefile
@@ -1,4 +1,5 @@
 all: linux.out
 
 linux.out: linux.cpp
-	g++ linux.cpp libfbdev.c -o linux.out -lglut -lGL -lGLU -lm
+	g++ linux.cpp -o linux.out -lglut -lGL -lGLU -lm
+	//g++ linux.cpp libfbdev.c -o linux.out -lglut -lGL -lGLU -lm
